// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RubricItem changes the currently selected value when a circle is pressed 1`] = `
<View
  style={
    Object {
      "paddingBottom": 12,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 6,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/Add.png",
          }
        }
        style={
          Object {
            "tintColor": "#8B969E",
          }
        }
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.description"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          View Long Description
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`RubricItem renders 1`] = `
<View
  style={
    Object {
      "paddingBottom": 12,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 6,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/Add.png",
          }
        }
        style={
          Object {
            "tintColor": "#8B969E",
          }
        }
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.description"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          View Long Description
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`RubricItem renders an already selected grade 1`] = `
<View
  style={
    Object {
      "paddingBottom": 12,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 6,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={true}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/Add.png",
          }
        }
        style={
          Object {
            "tintColor": "#8B969E",
          }
        }
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.description"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          View Long Description
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`RubricItem renders the selected custom grade 1`] = `
<View
  style={
    Object {
      "paddingBottom": 12,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 6,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade 12"
      on={true}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.customize-grade-2"
      value="12"
    >
      12
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.description"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          View Long Description
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`RubricItem renders with free form 1`] = `
<View
  style={
    Object {
      "paddingBottom": 12,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 6,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/Add.png",
          }
        }
        style={
          Object {
            "tintColor": "#8B969E",
          }
        }
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.add-comment-2"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          Add Comment
        </Text>
      </View>
    </TouchableOpacity>
    <Text
      accessible={false}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "fontFamily": ".SFUIDisplay",
          },
          Object {
            "color": "#2D3B45",
            "fontSize": 16,
          },
          Object {
            "alignSelf": "center",
            "color": "#8B969E",
            "fontSize": 12,
            "paddingHorizontal": 6,
          },
          Object {
            "fontFamily": ".SFUIDisplay",
          },
        ]
      }
    >
      •
    </Text>
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.description"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          View Long Description
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;

exports[`RubricItem will not show the add comment button and will show the comment if there is one 1`] = `
<View
  style={
    Object {
      "paddingBottom": 12,
      "paddingHorizontal": 16,
      "paddingTop": 16,
    }
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "fontFamily": ".SFUIDisplay",
        },
        Object {
          "color": "#2D3B45",
          "fontSize": 16,
        },
        Object {
          "fontWeight": "600",
        },
        Object {
          "fontFamily": ".SFUIDisplay-semibold",
        },
      ]
    }
  >
    A description
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginBottom": 6,
        "marginTop": 12,
      }
    }
  >
    <CircleToggle
      accessibilityLabel="10 — Full Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-3"
      value={10}
    >
      10
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="5 — Partial Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-2"
      value={5}
    >
      5
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="0 — No Credit"
      on={false}
      onLongPress={[Function]}
      onPress={[Function]}
      onPressOut={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.points-1"
      value={0}
    >
      0
    </CircleToggle>
    <CircleToggle
      accessibilityLabel="Customize Grade"
      on={false}
      onPress={[Function]}
      style={
        Object {
          "marginBottom": 4,
          "marginRight": 4,
        }
      }
      testID="rubric-item.customize-grade-2"
      value=""
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/Add.png",
          }
        }
        style={
          Object {
            "tintColor": "#8B969E",
          }
        }
      />
    </CircleToggle>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      testID="rubric-item.description"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "fontSize": 14,
                  "fontWeight": "500",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-medium",
              },
            ]
          }
        >
          View Long Description
        </Text>
      </View>
    </TouchableOpacity>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "paddingTop": 8,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "maxWidth": 300,
        }
      }
    >
      <Image
        capInsets={
          Object {
            "bottom": 16,
            "left": 18,
            "right": 18,
            "top": 24,
          }
        }
        resizeMode="stretch"
        source={
          Object {
            "testUri": "../../../src/images/speedgrader/bubble-them.png",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": null,
            "left": 0,
            "margin": 0,
            "padding": 0,
            "position": "absolute",
            "right": 0,
            "top": -4,
            "width": null,
          }
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "backgroundColor": "transparent",
                "paddingBottom": 8,
                "paddingHorizontal": 12,
                "paddingTop": 12,
              },
              Object {
                "color": "#2D3B45",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        A comment
      </Text>
    </View>
    <TouchableOpacity
      accessibilityTraits="button"
      hitSlop={
        Object {
          "bottom": 15,
          "left": 15,
          "right": 15,
          "top": 15,
        }
      }
      onPress={[Function]}
      style={
        Object {
          "marginLeft": 16,
        }
      }
      testID="rubric-item.edit-comment-2"
    >
      <View>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontSize": 16,
              },
              Array [
                Object {
                  "color": "#374A59",
                  "fontSize": 14,
                },
                Object {
                  "fontFamily": ".SFUIDisplay-bold",
                },
                Object {
                  "color": "#374A59",
                },
                Object {},
                Object {
                  "color": "#73818C",
                  "fontSize": 16,
                  "fontWeight": "600",
                },
              ],
              Object {
                "fontFamily": ".SFUIDisplay-semibold",
              },
            ]
          }
        >
          Edit
        </Text>
      </View>
    </TouchableOpacity>
  </View>
</View>
`;
